--- a/Personal Site/styles.css
+++ b/Personal Site/styles.css
@@ -18,7 +18,7 @@
     z-index: 999;
 }
 
-.navbar__container {
+.navbar_container {
     display: flex;
     justify-content: space-between;
     height: 80px;
@@ -29,7 +29,7 @@
     padding: 0 50px;
 }
 
-#navbar__logo {
+#navbar_logo {
     background-color: #ff8177;
     background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
     background-size: 100%;
@@ -44,17 +44,17 @@
     font-size: 2rem;
 }
 
-.navbar__menu {
+.navbar_menu {
     display: flex;
     align-items: center;
     list-style: none;
 }
 
-.navbar__item {
+.navbar_item {
     height: 80px;
 }
 
-.navbar__links {
+.navbar_links {
     color: #fff;
     display: flex;
     align-items: center;
@@ -65,13 +65,15 @@
     transition: all 0.3s ease;
 }
 
-.navbar__links:hover  {
+.navbar_links:hover  {
     color: #9518fc;
     transition: all 0.3s ease;
 }
 
+/* Mobile Responsive */
+
 @media screen and (max-width: 960px) {
-    .navbar__container {
+    .navbar_container {
         display: flex;
         justify-content: space-between;
         height: 80px;
@@ -81,7 +83,7 @@
         padding: 0;
     }
 
-    .navbar__menu {
+    .navbar_menu {
         display: grid;
         grid-template-columns: auto;
         margin: 0;
@@ -94,7 +96,7 @@
         background: #131313;
     }
 
-    .navbar__menu.active {
+    .navbar_menu.active {
         background: #131313;
         top: 100%;
         opacity: 1;
@@ -104,11 +106,11 @@
         font-size: 1.6rem;
     }
 
-    #navbar__logo {
+    #navbar_logo {
         padding-left: 25px;
     }
 
-    .navbar__toggle .bar {
+    .navbar_toggle .bar {
         width: 25px;
         height: 3px;
         margin: 5px auto;
@@ -118,11 +120,11 @@
         cursor: pointer;
     }
 
-    .navbar__item {
+    .navbar_item {
         width: 100%;
     }
 
-    .navbar__links {
+    .navbar_links {
         text-align: center;
         padding: 2rem;
         width: 100%;
@@ -147,3 +149,206 @@
     }
 }
 
+/* Hero Section */
+.hero {
+    background: #000000;
+    background: linear-gradient(to right, #161616, #000000);
+    padding: 200px 0;
+}
+
+.hero_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    height: 90%;
+    text-align: center;
+    padding: 30px;
+}
+
+.hero_heading {
+    font-size: 100px;
+    margin-bottom: 24px;
+    color: #fff;
+}
+
+.hero_heading span {
+    background: #b92b27;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #1565C0, #b92b27);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #1565C0, #b92b27); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.hero_description {
+    font-size: 60px;
+    background: #8E2DE2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.highlight {
+    border-bottom: 4px solid rgb(132, 0, 255);
+}
+
+/* Mobile Responsive */
+@media screen and (max-width: 768px) {
+    .hero_heading {
+        font-size: 60px;
+    }
+
+    .hero_description {
+        font-size: 40px;
+    }
+}
+
+/* About Section */
+.main {
+    background-color: #131313;
+    padding: 10rem 0;
+}
+
+.main_container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    height: 90%;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    padding: 0 50px;
+}
+
+.main_content {
+    color: #fff;
+    width: 100%;
+}
+
+.main_content h1 {
+    font-size: 2rem;
+    background-color: #fe3b6f;
+    background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+}
+
+.main_content h2 {
+    font-size: 4rem;
+    background: #8E2DE2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.main_content p {
+    margin-bottom: 1rem;
+    font-size: 2rem;
+    font-weight: 700;
+}
+
+.main_img_container {
+    text-align: center;
+}
+
+.main_img_card {
+    margin: 10px;
+    height: 500px;
+    width: 500px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+    background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+}
+
+/* Mobile Responsive */
+@media screen and (max-width: 1100px) {
+    .main_container {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin: 0 auto;
+        height: 90%;
+    }
+
+    .main_img_container {
+        display: flex;
+        justify-content: center;
+    }
+
+    .main_img_card {
+        height: 425px;
+        width: 425px;
+    }
+
+    .main_content {
+        text-align: center;
+        margin-bottom: 4rem;
+    }
+
+    .main_content h1 {
+        font-size: 2.5rem;
+        margin-top: 2rem;
+    }
+
+    .main_content h2 {
+        font-size: 3rem;
+    }
+
+    .main_content p {
+        margin-top: 1rem;
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .main_img_card {
+        height: 250px;
+        width: 250px;
+    }
+
+    .main_content {
+        text-align: center;
+        margin-bottom: 4rem;
+    }
+
+    .main_content h1 {
+        font-size: 2rem;
+        margin-top: 3rem;
+    }
+
+    .main_content h2 {
+        font-size: 2rem;
+    }
+
+    .main_content p {
+        margin-top: 2rem;
+        font-size: 1.5rem;
+    }
+}
+
+/* Projects Section */
