--- a/Personal Site/styles.css
+++ b/Personal Site/styles.css
@@ -352,3 +352,113 @@
 }
 
 /* Projects Section */
+.projects {
+    background-color: #131313;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 10rem 0;
+}
+
+.projects h1 {
+    background-color: #ff8177;
+    background-image: linear-gradient(to right, #ff0844 0%, #f7673c 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    margin-bottom: 5rem;
+    font-size: 2.5rem;
+}
+
+.projects_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+.projects_card {
+    margin: 10px;
+    height: 545px;
+    width: 420px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+    background-image: linear-gradient(to top, #00dbde 0%, #fc00ff 100%);
+    transition: 0.3s ease-in;
+}
+
+/* .projects_card:nth-child(2) {
+    background-image: linear-gradient(to right, #fc00ff 0%, #00dbde 50%, #fc00ff 100%);
+} */
+
+.projects_card h2 {
+    text-align: center;
+}
+
+.projects_card p {
+    text-align: center;
+    margin-top: 24px;
+    font-size: 20px;
+}
+
+.projects_btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+}
+
+.projects_card button {
+    color: #fff;
+    padding: 14px 24px;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    display: flex;
+    background: #131313;
+    font-size: 1rem;
+}
+
+.projects_card button:hover {
+    cursor: pointer;
+}
+
+.projects_card:hover {
+    transform: scale(1.075);
+    transition: 0.25s ease-in;
+    cursor: pointer;
+}
+
+/* Mobile Responsive */
+@media screen and (max-width: 1300px) {
+    .projects_wrapper {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .main_content h1 {
+        font-size: 2.5rem;
+        margin-top: 2rem;
+    }
+
+    .main_content h2 {
+        font-size: 3rem;
+    }
+
+    .main_content p {
+        margin-top: 1rem;
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .projects_wrapper {
+        grid-template-columns: 1fr;
+    }
+}
+
+/* Footer CSS */
