--- a/Personal Site/styles.css
+++ b/Personal Site/styles.css
@@ -461,4 +461,93 @@
     }
 }
 
-/* Footer CSS */
+/* Footer Section */
+.footer_container {
+    background-color: #000000;
+    padding: 5rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer_container h1 {
+    font-size: 2rem;
+    background-color: #fe3b6f;
+    background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+}
+
+.footer_links {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer_links_wrapper {
+    display: flex;
+}
+
+.footer_links_items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 16px;
+    text-align: left;
+    width: 160px;
+    box-sizing: border-box;
+}
+
+.footer_links_items h2 {
+    margin-bottom: 16px;
+    color: #fff;
+}
+
+.footer_links_items a {
+    color: #fff;
+    text-decoration: none;
+    margin-bottom: 0.5rem;
+}
+
+.footer_links_items a:hover {
+    color: #e9e9e9;
+    transition: 0.3 ease-out;
+}
+
+/* Mobile Responsive */
+@media screen and (max-width: 480px) {
+    .footer_container h1 {
+        font-size: 2rem;
+        margin-top: 3rem;
+    }
+
+    .footer_links_items {
+        margin: 0;
+        padding: 10px;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .footer_container h1 {
+        font-size: 2.5rem;
+        margin-top: 2rem;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .footer_links {
+        padding-top: 2rem;
+    }
+
+    .footer_links_wrapper {
+        flex-direction: column;
+    }
+}
