--- a/Personal Site/styles.css
+++ b/Personal Site/styles.css
@@ -31,7 +31,7 @@
 
 #navbar_logo {
     background-color: #ff8177;
-    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+    background: #fff;
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -131,7 +131,7 @@
         display: table;
     }
 
-    #mobile-menu {
+    .mobile-menu {
         position: absolute;
         top: 20%;
         right: 5%;
@@ -353,7 +353,7 @@
 
 /* Projects Section */
 .projects {
-    background-color: #131313;
+    background-color: #000000;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -461,6 +461,17 @@
     }
 }
 
+/* Skills Section */
+.skills {
+    background-color: #131313;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 10rem 0;
+}
+
 /* Footer Section */
 .footer_container {
     background-color: #000000;
@@ -519,6 +530,11 @@
 .footer_links_items a:hover {
     color: #e9e9e9;
     transition: 0.3 ease-out;
+}
+
+.footer_links_items img{
+    height:30px;
+    width:30px;
 }
 
 /* Mobile Responsive */
