--- a/Personal Site/styles.css
+++ b/Personal Site/styles.css
@@ -1,3 +1,4 @@
+/* Credits to https://uigradients.com/ for gradients */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -8,7 +9,7 @@
 
 .navbar {
     background: #131313;
-    height: 80px;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -131,7 +132,7 @@
         display: table;
     }
 
-    .mobile-menu {
+    #mobile-menu {
         position: absolute;
         top: 20%;
         right: 5%;
@@ -359,7 +360,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    padding: 10rem 0;
+    padding: 6rem 0;
 }
 
 .projects h1 {
@@ -469,13 +470,13 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    padding: 10rem 0;
+    padding: 1rem 0;
 }
 
 /* Footer Section */
 .footer_container {
     background-color: #000000;
-    padding: 5rem 0;
+    padding: 6rem 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -492,7 +493,7 @@
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
     text-transform: uppercase;
-    margin-bottom: 32px;
+    margin-bottom: 8px;
 }
 
 .footer_links {
@@ -504,37 +505,42 @@
 
 .footer_links_wrapper {
     display: flex;
+
 }
 
 .footer_links_items {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 16px;
+    margin: 48px;
     text-align: left;
-    width: 160px;
+    width: 180px;
     box-sizing: border-box;
 }
 
-.footer_links_items h2 {
+/* .footer_links_items h2 {
     margin-bottom: 16px;
     color: #fff;
-}
+} */
 
 .footer_links_items a {
+    font-size: 30px;
     color: #fff;
     text-decoration: none;
     margin-bottom: 0.5rem;
+    transition: all 0.2s ease;
+    border-bottom: 4px solid #000000;
 }
 
 .footer_links_items a:hover {
-    color: #e9e9e9;
-    transition: 0.3 ease-out;
+    border-bottom: 4px solid rgb(132, 0, 255);
+    transition: all 0.2s ease;
 }
 
 .footer_links_items img{
-    height:30px;
-    width:30px;
+    height:50px;
+    width:50px;
+    vertical-align: bottom;
 }
 
 /* Mobile Responsive */
@@ -551,6 +557,7 @@
     }
 }
 
+/* Mobile Responsive */
 @media screen and (max-width: 1300px) {
     .footer_container h1 {
         font-size: 2.5rem;
@@ -567,3 +574,4 @@
         flex-direction: column;
     }
 }
+
