--- a/Personal Site/styles.css
+++ b/Personal Site/styles.css
@@ -1,4 +1,6 @@
 /* Credits to https://uigradients.com/ for gradients */
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -151,51 +153,32 @@
 }
 
 /* Hero Section */
+/* Credit to https://wallpaperaccess.com/pixel-art-gif for background gif */
 .hero {
-    background: #000000;
-    background: linear-gradient(to right, #161616, #000000);
-    padding: 200px 0;
+    background: linear-gradient(to top, rgba(19, 19, 19, 0) 60%, rgb(19, 19, 19)) no-repeat center center fixed
+                , linear-gradient(to bottom, rgba(19, 19, 19, 0) 60%, rgb(19, 19, 19))
+                , url(../Images/hero.gif) no-repeat center center fixed;
+    padding: 350px;
 }
 
 .hero_container {
     display: flex;
     flex-direction: column;
+    max-width: 850px;
+    margin: -150px auto;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    height: 90%;
-    text-align: center;
-    padding: 30px;
+    padding: 24px;
+    border: 4px solid #fff;
+    background: #1313138c;
+    border-radius: 24px;
+    position: absolute;    
 }
 
 .hero_heading {
-    font-size: 100px;
-    margin-bottom: 24px;
+    font-size: 80px;
     color: #fff;
-}
-
-.hero_heading span {
-    background: #b92b27;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #1565C0, #b92b27);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #1565C0, #b92b27); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-}
-
-.hero_description {
-    font-size: 60px;
-    background: #8E2DE2;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
 }
 
 .highlight {
@@ -207,16 +190,13 @@
     .hero_heading {
         font-size: 60px;
     }
-
-    .hero_description {
-        font-size: 40px;
-    }
 }
 
 /* About Section */
 .main {
     background-color: #131313;
     padding: 10rem 0;
+    z-index: 10;
 }
 
 .main_container {
@@ -312,7 +292,7 @@
     }
 
     .main_content h1 {
-        font-size: 2.5rem;
+        font-size: 3rem;
         margin-top: 2rem;
     }
 
@@ -371,8 +351,8 @@
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
-    margin-bottom: 5rem;
-    font-size: 2.5rem;
+    margin-bottom: 3rem;
+    font-size: 3rem;
 }
 
 .projects_wrapper {
@@ -426,8 +406,9 @@
 }
 
 .projects_card button:hover {
-    cursor: pointer;
-}
+    transform: scale(1.075);
+    transition: 0.25s ease-in;
+    cursor: pointer;}
 
 .projects_card:hover {
     transform: scale(1.075);
@@ -517,11 +498,6 @@
     width: 180px;
     box-sizing: border-box;
 }
-
-/* .footer_links_items h2 {
-    margin-bottom: 16px;
-    color: #fff;
-} */
 
 .footer_links_items a {
     font-size: 30px;
