--- a/Personal Site/styles.css
+++ b/Personal Site/styles.css
@@ -1,5 +1,6 @@
 /* Credits to https://uigradients.com/ for gradients */
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400&display=swap');
+/* Credits to https://wallpaperaccess.com/pixel-art-gif for background gif */
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400&family=VT323&display=swap');
 
 * {
     box-sizing: border-box;
@@ -10,7 +11,6 @@
 }
 
 .navbar {
-    background: #131313;
     height: 70px;
     display: flex;
     justify-content: center;
@@ -19,6 +19,8 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    background: linear-gradient(to top, rgba(19, 19, 19, 0) 60%, rgb(19, 19, 19)) fixed, 
+                url(../Images/hero.gif) no-repeat center center fixed;
 }
 
 .navbar_container {
@@ -33,7 +35,6 @@
 }
 
 #navbar_logo {
-    background-color: #ff8177;
     background: #fff;
     background-size: 100%;
     -webkit-background-clip: text;
@@ -45,6 +46,11 @@
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
+}
+
+#navbar_logo:hover {
+    background-color: #9518fc;
+    transition: all 0.3s ease;
 }
 
 .navbar_menu {
@@ -100,13 +106,14 @@
     }
 
     .navbar_menu.active {
-        background: #131313;
+        background: linear-gradient(to top, rgba(19, 19, 19, 0.5) , rgb(19, 19, 19, 0));
         top: 100%;
         opacity: 1;
         transition: all 0.5s ease;
         z-index: 99;
         height: 60vh;
         font-size: 1.6rem;
+        border-radius: 24px;
     }
 
     #navbar_logo {
@@ -134,55 +141,111 @@
         display: table;
     }
 
-    #mobile-menu {
+    #mobile_menu {
         position: absolute;
         top: 20%;
         right: 5%;
         transform: translate(5%, 20%);
     }
 
-    #mobile-menu.is-active .bar:nth-child(2) {
+    #mobile_menu.is_active .bar:nth-child(2) {
         opacity: 0;
     }
-    #mobile-menu.is-active .bar:nth-child(1) {
+    #mobile_menu.is_active .bar:nth-child(1) {
         transform: translate(8px) rotate(45deg);
     }
-    #mobile-menu.is-active .bar:nth-child(3) {
+    #mobile_menu.is_active .bar:nth-child(3) {
         transform: translate(-8px) rotate(-45deg);
     }
 }
 
-/* Hero Section */
-/* Credit to https://wallpaperaccess.com/pixel-art-gif for background gif */
-.hero {
-    background: linear-gradient(to top, rgba(19, 19, 19, 0) 60%, rgb(19, 19, 19)) no-repeat center center fixed
-                , linear-gradient(to bottom, rgba(19, 19, 19, 0) 60%, rgb(19, 19, 19))
-                , url(../Images/hero.gif) no-repeat center center fixed;
-    padding: 350px;
+.highlight {
+    border-bottom: 4px solid rgb(132, 0, 255);
 }
 
-.hero_container {
-    display: flex;
-    flex-direction: column;
-    max-width: 850px;
-    margin: -150px auto;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    padding: 24px;
-    border: 4px solid #fff;
-    background: #1313138c;
-    border-radius: 24px;
-    position: absolute;    
+/* Hero Section */
+.hero {
+    background: linear-gradient(to top, rgba(19, 19, 19, 0) 60%, rgba(19, 19, 19)) fixed
+                , linear-gradient(to bottom, rgba(19, 19, 19, 0) 25%, rgb(19, 19, 19))
+                , url(../Images/hero.gif) no-repeat center center fixed;
+    padding: 350px 0px;
+    text-align: left;
 }
 
 .hero_heading {
-    font-size: 80px;
-    color: #fff;
+    display: flex;
+    flex-direction: column;
+    max-width: 1000px;
+    margin: -280px 0 0 50px;
+    text-align: left;
 }
 
-.highlight {
-    border-bottom: 4px solid rgb(132, 0, 255);
+.hero_heading h1 {
+    font-family: 'VT323', monospace;
+    font-size: 120px;
+    color: #fff;
+    margin: -25px;
+    white-space: nowrap;
+    overflow: hidden;
+}   
+
+/* Credits to https://codepen.io/Marty-Development/pen/xxwBJqO for multi-line typewriter effect */
+#hero1 {
+    border-right: 2px solid rgba(17, 17, 17, 0);
+    animation: animated-text_1 2s steps(30, end) 1s 1 normal both,
+    animated-cursor 900ms steps(30, end) 4;
+}
+
+#hero2 {
+    border-right: 2px solid rgba(17, 17, 17, 0);
+    animation: animated-text_2 2s steps(30, end) 1s 1 normal both,
+    animated-cursor 900ms steps(30, end) 3;
+    -webkit-animation-delay: 3.5s;
+    animation-delay: 3.5s;
+}
+
+#hero3 {
+    border-right: 2px solid rgba(17, 17, 17, 0);
+    animation: animated-text_3 2s steps(30, end) 1s 1 normal both,
+    animated-cursor 900ms steps(30, end) infinite;
+    -webkit-animation-delay: 6.5s;
+    animation-delay: 6.5s;
+}
+
+@keyframes animated-cursor {
+    from {
+      border-right-color: rgba(17, 17, 17, 0);
+    }
+    to {
+      border-right-color: rgba(255, 255, 255, 0.8);
+    }
+}
+  
+  @keyframes animated-text_1 {
+    from {
+      width: 0;
+    }
+    to {
+      width: 9ch;
+    }
+}
+  
+  @keyframes animated-text_2 {
+    from {
+      width: 0;
+    }
+    to {
+      width: 12ch;
+    }
+}
+
+  @keyframes animated-text_3 {
+    from {
+      width: 0;
+    }
+    to {
+      width: 18.5ch;
+    }
 }
 
 /* Mobile Responsive */
@@ -193,66 +256,52 @@
 }
 
 /* About Section */
-.main {
+.about {
     background-color: #131313;
-    padding: 10rem 0;
-    z-index: 10;
+    padding: 8rem 0;
 }
 
-.main_container {
+.about_container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
     height: 90%;
-    z-index: 1;
     width: 100%;
     max-width: 1300px;
-    padding: 0 50px;
+    padding: 0 25px;
 }
 
-.main_content {
+.about_content {
     color: #fff;
     width: 100%;
 }
 
-.main_content h1 {
-    font-size: 2rem;
+.about_content h1 {
+    font-size: 4rem;
     background-color: #fe3b6f;
-    background-image: linear-gradient(to top, #ff087b 0%, #ed1a52 100%);
+    background-image: linear-gradient(135deg, #db0235 10%, #ff1e87 100%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
     text-transform: uppercase;
-    margin-bottom: 32px;
+    margin-bottom: 8px;
 }
 
-.main_content h2 {
-    font-size: 4rem;
-    background: #8E2DE2;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-text-fill-color: transparent;
-}
-
-.main_content p {
+.about_content p {
     margin-bottom: 1rem;
-    font-size: 2rem;
+    font-size: 1.25rem;
     font-weight: 700;
 }
 
-.main_img_container {
+.about_img_container {
     text-align: center;
 }
 
-.main_img_card {
+.about_img_card {
     margin: 10px;
     height: 500px;
     width: 500px;
@@ -261,12 +310,12 @@
     flex-direction: column;
     justify-content: center;
     color: #fff;
-    background-image: linear-gradient(to right, #00dbde 0%, #fc00ff 100%);
+    background-image: linear-gradient(135deg, #00dbde 10%, #fc00ff 100%);
 }
 
 /* Mobile Responsive */
 @media screen and (max-width: 1100px) {
-    .main_container {
+    .about_container {
         display: grid;
         grid-template-columns: 1fr;
         align-items: center;
@@ -276,57 +325,57 @@
         height: 90%;
     }
 
-    .main_img_container {
+    .about_img_container {
         display: flex;
         justify-content: center;
     }
 
-    .main_img_card {
+    .about_img_card {
         height: 425px;
         width: 425px;
     }
 
-    .main_content {
+    .about_content {
         text-align: center;
         margin-bottom: 4rem;
     }
 
-    .main_content h1 {
+    .about_content h1 {
         font-size: 3rem;
         margin-top: 2rem;
     }
 
-    .main_content h2 {
+    .about_content h2 {
         font-size: 3rem;
     }
 
-    .main_content p {
+    .about_content p {
         margin-top: 1rem;
         font-size: 1.5rem;
     }
 }
 
 @media screen and (max-width: 480px) {
-    .main_img_card {
+    .about_img_card {
         height: 250px;
         width: 250px;
     }
 
-    .main_content {
+    .about_content {
         text-align: center;
         margin-bottom: 4rem;
     }
 
-    .main_content h1 {
+    .about_content h1 {
         font-size: 2rem;
         margin-top: 3rem;
     }
 
-    .main_content h2 {
+    .about_content h2 {
         font-size: 2rem;
     }
 
-    .main_content p {
+    .about_content p {
         margin-top: 2rem;
         font-size: 1.5rem;
     }
@@ -340,19 +389,19 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    padding: 6rem 0;
+    padding: 10rem 0;
 }
 
 .projects h1 {
-    background-color: #ff8177;
-    background-image: linear-gradient(to right, #ff0844 0%, #f7673c 100%);
+    background: linear-gradient(135deg, #4A00E0 10%, #8E2DE2 100%);
     background-size: 100%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
-    margin-bottom: 3rem;
-    font-size: 3rem;
+    margin-bottom: 2rem;
+    margin-top: -4rem;
+    font-size: 4rem;
 }
 
 .projects_wrapper {
@@ -363,57 +412,83 @@
 
 .projects_card {
     margin: 10px;
-    height: 545px;
+    height: 390px;
     width: 420px;
-    border-radius: 4px;
-    display: flex;
+    border-radius: 16px;
     flex-direction: column;
     justify-content: center;
     color: #fff;
-    background-image: linear-gradient(to top, #00dbde 0%, #fc00ff 100%);
-    transition: 0.3s ease-in;
+    transition: ease-in-out 0.75s;
+    text-decoration: none;
+    position: relative;
+    display: flex;
 }
 
-/* .projects_card:nth-child(2) {
-    background-image: linear-gradient(to right, #fc00ff 0%, #00dbde 50%, #fc00ff 100%);
-} */
+.projects_card:nth-child(1) {
+    /* background: linear-gradient(to left, #27b87b, #44a08d); */
+    background-image: linear-gradient(135deg, #7bbef5 10%, #c9e6ab 100%);
+}
+
+
+.projects_card:nth-child(2) {
+    /* background: linear-gradient(to left, #27b87b, #44a08d); */
+    background-image: linear-gradient(135deg, #b0affa 10%, #f6d2da 100%);
+}
+
+.projects_card:nth-child(3) {
+    /* background: linear-gradient(to left, #00ff95, #27b87b); */
+    background-image: linear-gradient(135deg, #f690af 10%, #f6e05f 100%);
+}
+
+.dim_cards {
+    opacity: 0.5;
+}
 
 .projects_card h2 {
+    position: absolute;
+    top: 18px;
+    width: 100%;
     text-align: center;
+    font-size: 35px;
 }
 
-.projects_card p {
-    text-align: center;
+.projects_card img {
+    width: 380px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    margin-top: 3rem;
+}
+
+.projects_desc {
+    text-align: left;
     margin-top: 24px;
     font-size: 20px;
-}
-
-.projects_btn {
+    opacity: 0;
+    transition: ease-in-out 0.25s;
+    margin: 0px;
+    position: absolute;
+    background-color: #131313cc;
     display: flex;
-    justify-content: center;
-    margin-top: 16px;
+    flex-flow: column;
+    padding: 2rem 2rem;
+    height: 100%;
+    transition: ease-in-out 0.5s;
 }
 
-.projects_card button {
-    color: #fff;
-    padding: 14px 24px;
-    border: none;
-    outline: none;
-    border-radius: 4px;
-    display: flex;
-    background: #131313;
-    font-size: 1rem;
+.devstack p{
+    position: absolute;
+    bottom: 24px;
+    font-size: 16px;
+    text-align: center;
+    width: 100%;
+    left: 0px;
 }
 
-.projects_card button:hover {
-    transform: scale(1.075);
-    transition: 0.25s ease-in;
-    cursor: pointer;}
-
-.projects_card:hover {
-    transform: scale(1.075);
-    transition: 0.25s ease-in;
-    cursor: pointer;
+.projects_desc:hover {
+    opacity: 1;
+    transition: ease-in-out 0.5s;
 }
 
 /* Mobile Responsive */
@@ -422,16 +497,16 @@
         grid-template-columns: 1fr 1fr;
     }
 
-    .main_content h1 {
+    .about_content h1 {
         font-size: 2.5rem;
         margin-top: 2rem;
     }
 
-    .main_content h2 {
+    .about_content h2 {
         font-size: 3rem;
     }
 
-    .main_content p {
+    .about_content p {
         margin-top: 1rem;
         font-size: 1.5rem;
     }
