--- a/Personal Site/CSS/hero.css
+++ b/Personal Site/CSS/hero.css
@@ -1,9 +1,10 @@
 /* Hero Section */
+/* Credits to https://wallpaperaccess.com/pixel-art-gif for background gif */
 .hero {
     background: linear-gradient(to top, rgba(19, 19, 19, 0) 60%, rgba(19, 19, 19)) fixed
                 , linear-gradient(to bottom, rgba(19, 19, 19, 0) 25%, rgb(19, 19, 19))
                 , url(../Images/hero.gif) no-repeat center center fixed;
-    padding: 350px 0px;
+    padding: 400px 0px;
     text-align: left;
 }
 
@@ -28,23 +29,23 @@
 #hero1 {
     border-right: 2px solid rgba(17, 17, 17, 0);
     animation: animated-text_1 1s steps(30, end) 1s 1 normal both,
-    animated-cursor 900ms steps(30, end) 4;
+    animated-cursor 900ms steps(30, end) 3;
 }
 
 #hero2 {
     border-right: 2px solid rgba(17, 17, 17, 0);
     animation: animated-text_2 1s steps(30, end) 1s 1 normal both,
-    animated-cursor 900ms steps(30, end) 3;
-    -webkit-animation-delay: 3.5s;
-    animation-delay: 3.5s;
+    animated-cursor 900ms steps(30, end) 2;
+    -webkit-animation-delay: 3s;
+    animation-delay: 3s;
 }
 
 #hero3 {
     border-right: 2px solid rgba(17, 17, 17, 0);
     animation: animated-text_3 1s steps(30, end) 1s 1 normal both,
     animated-cursor 900ms steps(30, end) infinite;
-    -webkit-animation-delay: 6.5s;
-    animation-delay: 6.5s;
+    -webkit-animation-delay: 5.5s;
+    animation-delay: 5.5s;
 }
 
 @keyframes animated-cursor {
@@ -103,4 +104,11 @@
         font-size: 52px;
         margin: -10px;
     }
+}
+
+@media screen and (max-width: 440px) {
+  .hero_heading h1{
+      font-size: 42px;
+      margin: -10px;
+  }
 }
