--- a/Personal Site/CSS/navbar.css
+++ b/Personal Site/CSS/navbar.css
@@ -1,4 +1,5 @@
 /* Navbar Section */
+/* Credits to https://wallpaperaccess.com/pixel-art-gif for background gif */
 .navbar {
     height: 70px;
     display: flex;
@@ -95,7 +96,7 @@
     }
 
     .navbar_menu.active {
-        background: linear-gradient(to top, rgba(19, 19, 19, 0.5) , rgb(19, 19, 19, 0));
+        background: linear-gradient(to top, rgba(19, 19, 19, 0.75) , rgb(19, 19, 19, 0.5));
         top: 100%;
         opacity: 1;
         transition: all 0.5s ease;
