--- a/Personal Site/CSS/projects.css
+++ b/Personal Site/CSS/projects.css
@@ -16,9 +16,17 @@
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
-    margin-bottom: 2rem;
     margin-top: -4rem;
     font-size: 4rem;
+    margin-bottom: 1rem;
+}
+
+#note {
+    color: #fff;
+    font-size: 14px;
+    margin-bottom: 1rem;
+    font-weight: 400;
+    opacity: 0;
 }
 
 .projects_wrapper {
@@ -119,6 +127,12 @@
     }
 }
 
+@media screen and (max-width: 810px) {
+    #note {
+        opacity: 1;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .projects_card {
         height: 260px;
@@ -136,5 +150,25 @@
 
     .devstack p{
         font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .projects_card {
+        height: 200px;
+        width: 355px;
+    }
+
+    .projects_card img {
+        width: 370px;
+        height: 170px;
+    }
+
+    .projects_desc p {
+        font-size: 13px;
+    }
+
+    .devstack p{
+        font-size: 11px;
     }
 }
