--- a/CSS/hero.css
+++ b/CSS/hero.css
@@ -107,3 +107,15 @@
       font-size: 42px;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .hero_heading h1{
+      font-size: 38px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .hero_heading h1{
+      font-size: 36px;
+  }
+}
