Changed navbar name font size and project card width for smaller devices.

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -148,3 +148,9 @@
         transform: translate(-8px) rotate(-45deg);
     }
 }
+
+@media screen and (max-width: 475px) {
+    #navbar_logo {
+        font-size: 1.5rem;
+    }
+}
