--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -23,10 +23,14 @@
 
 #note {
     color: #fff;
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 1rem;
     font-weight: 400;
-    opacity: 0;
+}
+
+#note > a {
+    color: #8E2DE2;
+    text-decoration: none;
 }
 
 .projects_wrapper {
@@ -133,7 +137,7 @@
 }
 
 @media screen and (max-width: 810px) {
-    #note {
+    .projects_desc {
         opacity: 1;
     }
 }
